Fixed Spacing and buttons

--- a/css/about.css
+++ b/css/about.css
@@ -50,7 +50,7 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 2rem 3rem;
+    padding: 2rem 2rem;
 }
 
 .container-2 div {
